2008-09-03  delx

	* A few documentation spelling and grammar fixes.
	* Fixed borders once and for all.
	* Full-screen mode hides menubar rather than pretending to be
	  a screensaver. This fixes Apple-Tab and other things.
	* Fixed enter key on the numeric keypad in keypad app mode
	* Fixed iTerm so that it can start with no preferences file again

2008-08-27	fabian

	* Incorporated two patches provided by Akinori MUSHA (knu). They fixed two double-width character issues.
	
2008-08-21	fabian

	* Fixed a bug that causes loss of preferences when upgrade.
	
2008-08-21  delx

	* Compiles & runs!
	* Better default preferences
	* Works with TERM=xterm
	* Sets the COLORFGBG variable
	* No annoying reverse-video border
	* tput smso ; clear ; tput rmso -- works as expected
	* back_tab supported (the key and the function)
	* new-style xterm altscreens supported
	* Fixed NSLock warnings on 10.5
	* Horizontal scroll-wheel doesn't scroll vertically anymore
	* Improved numeric keypad behaviour, now acts like xterm
	* Fixed a nasty crashing bug

2007-11-20  fabian

    * Added ESC[s and ESC[u to save and restore cursor, based on the patch from SF's bug report.
    
2007-09-08	dnedrow

	* Added private method to PreferencePanel to migrate (copy) old settings to new name.
	
2007-08-14  fabian

    * Change the behavior of the PAUSE_MODE in PTYSession so the labels can still be refreshed.
    
2007-08-11	ujwal

	* Removed some unused code.

2007-06-16	ujwal
	
	* Updated version strings so that dev build does not try to download latest version from web site.
	* Added an import statement in PTYTextView.m to fix a warning.
	* Fixed initialization bug in iTermController:-nextTerminal

2007-6-11   fabian

    * Aoid crashes when memory runs out.
    * Removed excessive debug outputs.
    * Adjustments to the full screen mode. Fixed a crash related (#1725139).

2007-5-24   fabian

    * Fixed a timer bug in PTYSession introduced in the last change.
	
2007-5-23   fabian
